# todolistapp

./: .gitignore  README.md  database.db  pyproject.toml  toDolist.db
src/staticFiles/: README.md  index.html
src/staticFiles/src/css/: styles.css
src/staticFiles/src/js/: main.js
src/todolist/: database.py  main.py  models.py  schemas.py  settings.py
